chore(demo): misaligned column fix

--- a/projects/addon-doc/src/components/documentation/documentation.style.less
+++ b/projects/addon-doc/src/components/documentation/documentation.style.less
@@ -36,6 +36,9 @@
 
     &:last-child {
         padding-right: 0;
+    }
+
+    &_value {
         text-align: right;
     }
 
@@ -64,6 +67,10 @@
     color: var(--tui-text-02);
     font-weight: normal;
     text-align: left;
+
+    &_value {
+        text-align: right;
+    }
 }
 
 .t-property {
